Fix uneven top and bottom margin of the gallery

--- a/screen.css
+++ b/screen.css
@@ -130,9 +130,9 @@ nav ul li a:hover{
 #gallery{
 	position: relative;
 	clear: both;
-	top: 22px;
+	top: 11px;
 	margin: 11px;
-	margin-bottom: 44px;
+	margin-bottom: 22px;
 }
 
 #gallery li {
